Refine non-termination induction step